--- a/src/components/pages/main/Main.scss
+++ b/src/components/pages/main/Main.scss
@@ -10,14 +10,17 @@
     padding: 5px;
     z-index: 0; ////////////////////
 
-    // .start_page {
-    //     width: 80vw;
-    //     min-height: 400px;
-    //     border: 2px solid rgb(110, 160, 209);
-    //     border-radius: 10px;
-    //     padding: 5px;
-    //     z-index: 0; ///////
-    // }
+    .start_page {
+        // width: 80vw;
+        // min-height: 400px;
+        // border: 2px solid rgb(110, 160, 209);
+        // border-radius: 10px;
+        // padding: 5px;
+        // z-index: 0; ///////
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+    }
 
     h3 {
         margin: 0 10px 10px 0;
@@ -63,14 +66,14 @@
         transition: 0.5s ease;
     }
 
-    .bookmark ::before  {
-        content: '';
-        background-color: rgb(255, 255, 255);
-        position: absolute;
-        width: 120px;
-        height: 10px;
-        left: -2px;
-        top: 58px;
+    // .bookmark ::before  {
+    //     content: '';
+    //     background-color: rgb(255, 255, 255);
+    //     position: absolute;
+    //     width: 120px;
+    //     height: 10px;
+    //     left: -2px;
+    //     top: 58px;
 
-    }
+    // }
 }
