--- a/client/src/components/pages/main/Main.scss
+++ b/client/src/components/pages/main/Main.scss
@@ -2,21 +2,16 @@
 .page_container {
     width: 80vw;
     min-height: 500px;
+    margin: 20px auto;
     border: 2px solid lightslategray;
     border-radius: 10px;
-    position: relative;
-    left: 20px;
-    top: 60px;
+    // position: relative;
+    // left: 20px;
+    // top: 60px;
     padding: 5px;
     z-index: 0; ////////////////////
 
     .start_page {
-        // width: 80vw;
-        // min-height: 400px;
-        // border: 2px solid rgb(110, 160, 209);
-        // border-radius: 10px;
-        // padding: 5px;
-        // z-index: 0; ///////
         display: flex;
         flex-direction: column;
         justify-content: start;
